--- a/emacs.org
+++ b/emacs.org
@@ -318,6 +318,9 @@
 (setq org-startup-truncated nil)
 
 
+(setq org-export-with-toc nil)
+(define-key control-semi-map (kbd "M-e") 'org-export)
+
 #+END_SRC
 ** Misc behaviour
 
