--- a/emacs.org
+++ b/emacs.org
@@ -368,6 +368,9 @@
 	("\\.h\\'" . c++-mode)
 	("\\.lua\\'" . lua-mode)
 
+	("\\.s\\'" . c++-mode)
+	("\\.mc\\'" . c++-mode)
+
 	("\\.el\\'" . emacs-lisp-mode)
 
 	("\\.vert\\'" . glsl-mode)
