--- a/emacs.org
+++ b/emacs.org
@@ -96,7 +96,7 @@
 (global-set-key (kbd "H-0") 'delete-window)
 (global-set-key (kbd "H-e") 'execute-extended-command)
 
-(global-set-key (kbd "<Scroll_Lock>") 'windresize)
+(global-set-key (kbd "<Scroll_Lock>") 'scroll-lock-mode)
 (global-set-key (kbd "<up>") 'scroll-down-line)
 (global-set-key (kbd "<down>") 'scroll-up-line)
 
